<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44B386"
    tools:context=".PR7_2">

    <Button
        android:id="@+id/button17"
        android:layout_width="435dp"
        android:layout_height="176dp"
        android:shadowRadius="100"
        android:text="@string/_0"
        android:textColor="#FDFBFB"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <Button
        android:id="@+id/button16"
        android:layout_width="200dp"
        android:layout_height="178dp"
        android:shadowRadius="100"
        android:text="@string/_1"
        android:textColor="#FDFCFC"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/button15"
        android:layout_width="205dp"
        android:layout_height="174dp"
        android:shadowRadius="100"
        android:text="@string/_2"
        android:textColor="#FDFCFC"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <Button
        android:id="@+id/button14"
        android:layout_width="205dp"
        android:layout_height="171dp"
        android:shadowRadius="100"
        android:text="@string/_3"
        android:textColor="#FAF6F6"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <Button
        android:id="@+id/button13"
        android:layout_width="201dp"
        android:layout_height="183dp"
        android:shadowRadius="100"
        android:text="@string/_6"
        android:textColor="#FAF8F8"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.664"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <Button
        android:id="@+id/button12"
        android:layout_width="195dp"
        android:layout_height="187dp"
        android:shadowRadius="100"
        android:text="@string/_5"
        android:textColor="#FBF9F9"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/button11"
        android:layout_width="197dp"
        android:layout_height="190dp"
        android:shadowRadius="100"
        android:text="@string/_4"
        android:textColor="#FBFAFA"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/button10"
        android:layout_width="190dp"
        android:layout_height="187dp"
        android:shadowRadius="100"
        android:text="@string/_7"
        android:textColor="#F6F4F4"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <Button
        android:id="@+id/button9"
        android:layout_width="205dp"
        android:layout_height="187dp"
        android:shadowRadius="100"
        android:text="@string/_8"
        android:textColor="#FBF9F9"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <Button
        android:id="@+id/button8"
        android:layout_width="201dp"
        android:layout_height="187dp"
        android:shadowRadius="100"
        android:text="@string/_9"
        android:textColor="#F8F7F7"
        android:textSize="75sp"
        app:backgroundTint="#F6E020"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <Button
        android:id="@+id/button6"
        android:layout_width="188dp"
        android:layout_height="178dp"
        android:shadowRadius="100"
        android:text="@string/cal1"
        android:textColor="#020202"
        android:textSize="75sp"
        app:backgroundTint="#FF9800"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <Button
        android:id="@+id/button5"
        android:layout_width="201dp"
        android:layout_height="202dp"
        android:shadowRadius="100"
        android:text="@string/cal2"
        android:textColor="#020202"
        android:textSize="75sp"
        app:backgroundTint="#FF9800"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <Button
        android:id="@+id/button7"
        android:layout_width="189dp"
        android:layout_height="201dp"
        android:shadowRadius="100"
        android:text="@string/cal4"
        android:textColor="#020202"
        android:textSize="75sp"
        app:backgroundTint="#FF9800"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/button2"
        android:layout_width="965dp"
        android:layout_height="323dp"
        android:gravity="right"
        android:text="@string/_0"
        android:textSize="200sp"
        app:backgroundTint="#6BBAC5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="1045dp"
        android:layout_height="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/line"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button3"
        android:layout_width="198dp"
        android:layout_height="213dp"
        android:shadowRadius="100"
        android:text="@string/ac"
        android:textSize="50sp"
        app:backgroundTint="#F44336"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <Button
        android:id="@+id/button"
        android:layout_width="201dp"
        android:layout_height="176dp"
        android:shadowRadius="100"
        android:text="@string/cal"
        android:textColor="#020202"
        android:textSize="75sp"
        app:backgroundTint="#FF9800"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <Button
        android:id="@+id/button4"
        android:layout_width="194dp"
        android:layout_height="187dp"
        android:shadowRadius="100"
        android:text="@string/cal3"
        android:textColor="#020202"
        android:textSize="75sp"
        app:backgroundTint="#FF9800"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />
</androidx.constraintlayout.widget.ConstraintLayout>